--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --web-studio-grey: #2F303A;
-    --web-studio-blue: #2196F3;
-    --web-studio-white: #FFFFFF;
-    --web-studio-white2: #F5F4FA;
+  --web-studio-grey: #2f303a;
+  --web-studio-blue: #2196f3;
+  --web-studio-white: #ffffff;
+  --web-studio-white2: #f5f4fa;
 }
