--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -8,10 +8,10 @@
 body {
   color: var(--web-studio-black);
   font-family: "Roboto", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
   line-height: normal;
-  font-weight: 400;
+  font-weight: 500;
 }
 ul {
   list-style-type: none;
@@ -40,86 +40,80 @@ a {
 }
 .list-link {
   color: var(--web-studio-black);
-  font-weight: 500;
 }
 .list-link:hover {
   color: var(--web-studio-blue);
 }
-.hero {
-  background-color: #2f303a;
-}
-.hero-title {
-  color: var(--web-studio-white);
+.con-list {
+  color: var(--web-studio-black);
   text-align: center;
-  font-size: 44px;
-  font-weight: 900;
-  line-height: 1.4%;
-  text-transform: uppercase;
-}
-.hero-btn {
-  color: var(--web-studio-white);
-  text-align: center;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.9%;
-
-  width: 216px;
-  height: 50px;
-  background-color: var(--web-studio-blue);
+  line-height: 1.6%;
   border: 4px;
+  background-color: var(--web-studio-white2);
 }
-.main-section-title {
-  color: var(--web-studio-black);
-  font-weight: 700;
-  text-transform: uppercase;
+.con-list {
+  display: flex;
 }
-.main-section-text {
-  color: var(--web-studio-gray);
-  line-height: 1.7%;
+.main-btn-1 {
+  width: 73px;
+  height: 38px;
 }
-.features-title {
-  color: var(--web-studio-black);
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
+.main-btn-2 {
+  width: 125px;
+  height: 38px;
 }
-.features-img {
+.main-btn-3 {
+  width: 112px;
+  height: 38px;
+}
+.main-btn-4 {
+  width: 103px;
+  height: 38px;
+}
+.main-btn-5 {
+  width: 130px;
+  height: 38px;
+}
+.main-btn-1:hover {
+  color: var(--web-studio-white);
+  background-color: var(--web-studio-blue);
+}
+.main-btn-2:hover {
+  color: var(--web-studio-white);
+  background-color: var(--web-studio-blue);
+}
+.main-btn-3:hover {
+  color: var(--web-studio-white);
+  background-color: var(--web-studio-blue);
+}
+.main-btn-4:hover {
+  color: var(--web-studio-white);
+  background-color: var(--web-studio-blue);
+}
+.main-btn-5:hover {
+  color: var(--web-studio-white);
+  background-color: var(--web-studio-blue);
+}
+.info {
+  width: 370px;
+  height: 404px;
+  border: 1px solid #eee;
+  background: var(--web-studio-white);
+}
+.info-img {
   width: 370px;
   height: 294px;
 }
-.features-list {
-  display: flex;
-}
-.team-title {
+.info-title {
   color: var(--web-studio-black);
-  text-align: center;
-  font-size: 36px;
+  font-size: 18px;
   font-weight: 700;
+  line-height: 2%;
 }
-.team {
-  background: var(--web-studio-white2);
-}
-.team-info {
-  width: 270px;
-  height: 368px;
-  border-radius: 0px 0px 4px 4px;
-  background: #fff;
-}
-.team-img {
-  width: 270px;
-  height: 260px;
-}
-.team-name {
-  color: var(--web-studio-black);
-  text-align: center;
-  font-weight: 500;
-}
-.team-prof {
+.info-text {
   color: var(--web-studio-gray);
-  text-align: center;
-}
-.team-list {
-  display: flex;
+  font-weight: 400;
+  line-height: 1.9%;
 }
 .footer {
   background: #2f303a;
@@ -138,15 +132,14 @@ a {
 }
 .footer-adress {
   color: var(--web-studio-white);
+  font-size: 14px;
   line-height: 1.7%;
 }
 .footer-mail {
   color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
   line-height: 1.7%;
 }
 .footer-tel {
   color: rgba(255, 255, 255, 0.6);
-  font-size: 14px;
   line-height: 1.7%;
 }
