--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,15 @@ ul {
 a {
   text-decoration: none;
 }
-.header-web {
+.header-logo {
   color: var(--web-studio-blue);
-  font-family: Raleway;
+  font-family: 'Raleway', sans-serif;
   font-size: 26px;
   font-weight: 700;
 }
-.header-studio {
+.header-span {
   color: var(--web-studio-black);
-  font-family: Raleway;
+  font-family: 'Raleway', sans-serif;
   font-size: 26px;
   font-weight: 700;
 }
@@ -53,7 +53,7 @@ a {
   text-align: center;
   font-size: 44px;
   font-weight: 900;
-  line-height: 1.4%;
+  line-height: 1.4;
   text-transform: uppercase;
 }
 .hero-btn {
@@ -61,7 +61,7 @@ a {
   text-align: center;
   font-size: 16px;
   font-weight: 700;
-  line-height: 1.9%;
+  line-height: 1.9;
 
   width: 216px;
   height: 50px;
@@ -75,7 +75,7 @@ a {
 }
 .main-section-text {
   color: var(--web-studio-gray);
-  line-height: 1.7%;
+  line-height: 1.7;
 }
 .features-title {
   color: var(--web-studio-black);
@@ -122,31 +122,31 @@ a {
   display: flex;
 }
 .footer {
-  background: #2f303a;
+  background-color: #2f303a;
 }
-.footer-web {
+.footer-logo {
   color: var(--web-studio-blue);
-  font-family: Raleway;
+  font-family: 'Raleway', sans-serif;
   font-size: 26px;
   font-weight: 700;
 }
-.footer-studio {
+.footer-span {
   color: var(--web-studio-white);
-  font-family: Raleway;
+  font-family: 'Raleway', sans-serif;
   font-size: 26px;
   font-weight: 700;
 }
 .footer-adress {
   color: var(--web-studio-white);
-  line-height: 1.7%;
+  line-height: 1.7;
 }
 .footer-mail {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
-  line-height: 1.7%;
+  line-height: 1.7;
 }
 .footer-tel {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
-  line-height: 1.7%;
+  line-height: 1.7;
 }
