--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -74,7 +74,7 @@ ol {
   color: var(--web-studio-blue);
 }
 .contact-list-link {
-  color: var(--web-studio-black);
+  color: var(--web-studio-gray);
   font-size: 14px;
   letter-spacing: 0.28px;
 }
@@ -84,6 +84,12 @@ ol {
 .main {
   padding: 94px 0;
 }
+.main .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
 .main-btn {
   color: var(--web-studio-black);
   text-align: center;
@@ -91,8 +97,6 @@ ol {
   background-color: var(--web-studio-white2);
   border: none;
   border-radius: 4px;
-  margin: 0 auto;
-  display: block;
 }
 .main-btn:hover {
   color: var(--web-studio-white);
@@ -102,11 +106,7 @@ ol {
   margin: 50px 0 0;
   display: flex;
   gap: 30px;
-  flex-direction: row;
-}
-.main-list-item {
-  /* display: flex;
-  gap: 30px; */
+  flex-wrap: wrap;
 }
 .info {
   width: 370px;
@@ -124,11 +124,13 @@ ol {
   font-weight: 700;
   line-height: 2;
   letter-spacing: 1.08px;
+  padding-left: 24px;
 }
 .info-text {
   color: var(--web-studio-gray);
   font-weight: 400;
   line-height: 1.9;
+  padding-left: 24px;
 }
 .footer {
   background-color: #2f303a;
@@ -139,12 +141,11 @@ ol {
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
+  display: block;
+  margin-bottom: 20px;
 }
 .footer-span {
   color: var(--web-studio-white);
-  font-family: "Raleway", sans-serif;
-  font-size: 26px;
-  font-weight: 700;
 }
 .footer-adress {
   color: var(--web-studio-white);
@@ -161,4 +162,9 @@ ol {
   color: rgba(255, 255, 255, 0.6);
   line-height: 1.7;
   letter-spacing: 0.42px;
+}
+.address {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
 }
