--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -47,6 +47,7 @@ ol {
 }
 .header {
   padding: 24px 0 25px;
+  border-bottom: 1px solid #ECECEC;
 }
 .header-logo {
   color: var(--web-studio-blue);
@@ -115,10 +116,9 @@ ol {
   flex-wrap: wrap;
 }
 .info {
-  width: 370px;
-  height: 404px;
   border: 1px solid #eee;
   background-color: var(--web-studio-white);
+  max-width: 370px;
 }
 .info-img {
   width: 370px;
@@ -137,7 +137,7 @@ ol {
   color: var(--web-studio-gray);
   font-weight: 400;
   line-height: 1.9;
-  padding-left: 24px;
+  padding: 0 24px 20px;
 }
 .footer {
   background-color: #2f303a;
