--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -112,7 +112,8 @@ ol {
 .main-list {
   margin: 50px 0 0;
   display: flex;
-  gap: 30px;
+  justify-content: space-between;
+  row-gap: 30px;
   flex-wrap: wrap;
 }
 .main-list-item {
