--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ ol {
   border-radius: 4px;
   margin: 0 auto;
   display: block;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .features {
   padding-top: 94px;
@@ -130,13 +131,13 @@ ol {
   background-image: url("../images/antenna.svg");
 }
 .features-list-item:nth-child(2)::before {
-  background-image: url('../images/clock.svg');
+  background-image: url("../images/clock.svg");
 }
 .features-list-item:nth-child(3)::before {
-  background-image: url('../images/diagram.svg');
+  background-image: url("../images/diagram.svg");
 }
 .features-list-item:last-child::before {
-  background-image: url('../images/astronaut.svg');
+  background-image: url("../images/astronaut.svg");
 }
 .features-list-item {
   max-width: 270px;
@@ -189,6 +190,8 @@ ol {
   height: 368px;
   border-radius: 0px 0px 4px 4px;
   background: #fff;
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 .team-img {
   width: 270px;
