--- a/css/styles.css
+++ b/css/styles.css
@@ -137,16 +137,16 @@ ol {
   margin-bottom: 30px;
 }
 .features-list-item:first-child::before {
-  background-image: url("../images/antenna.svg");
+  background-image: url("../images/features/antenna.svg");
 }
 .features-list-item:nth-child(2)::before {
-  background-image: url("../images/clock.svg");
+  background-image: url("../images/features/clock.svg");
 }
 .features-list-item:nth-child(3)::before {
-  background-image: url("../images/diagram.svg");
+  background-image: url("../images/features/diagram.svg");
 }
 .features-list-item:last-child::before {
-  background-image: url("../images/astronaut.svg");
+  background-image: url("../images/features/astronaut.svg");
 }
 .features-list-item {
   max-width: 270px;
