--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,7 @@ ol {
   text-align: center;
   color: #fff;
   background-color: rgba(47, 48, 58, 0.8);
-  padding: 27px 113px;
+  padding: 27px;
   letter-spacing: 0.03em;
   position: absolute;
   bottom: 3px;
