--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ ol {
   text-transform: uppercase;
   margin-bottom: 30px;
 }
-.hero-btn {
+.button {
   color: var(--web-studio-white);
   font-size: 16px;
   font-weight: 700;
@@ -128,6 +128,174 @@ ol {
   display: block;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
+
+.hero-btn__submit {
+  width: 200px;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+}
+
+.backdrop .is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 528px;
+  min-height: 581px;
+  border-radius: 4px;
+  padding: 40px;
+  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  background-color: var(--web-studio-white);
+  transform: translate(-50%, -50%);
+}
+
+.modal-form__list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.modal__item {
+  position: relative;
+  width: 448px;
+}
+
+.modal__title {
+  color: #212121;
+  font-size: 20px;
+  text-align: center;
+}
+
+.modal__label {
+  color: #757575;
+  font-size: 12px;
+}
+
+.modal__input {
+  width: 448px;
+  height: 40px;
+  padding-left: 40px;
+  margin: 7px 0 10px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
+}
+
+.modal__input {
+  outline: var(--web-studio-blue);
+}
+
+.modal__icon {
+  position: absolute;
+  top: 37px;
+  left: 14px;
+  width: 13px;
+  height: 13px;
+}
+
+.modal__input:hover,
+.modal__input:hover + .modal__icon {
+  border-color: var(--web-studio-blue);
+  fill: var(--web-studio-blue);
+}
+
+.modal__com {
+  margin: 6px 0 10px;
+  padding: 11px;
+  width: 448px;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  resize: none;
+  cursor: text;
+}
+
+.modal__com:hover,
+.modal__com:focus {
+  border-color: var(--web-studio-blue);
+  outline-color: var(--web-studio-blue);
+}
+
+.modal-form__box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.modal__text {
+  color: #757575;
+  line-height: 1.71; /* 24/14 */
+}
+
+.modal__checkbox {
+  position: relative;
+  width: 16px;
+  height: 15px;
+  border-radius: 1px;
+  outline: 2px solid #212121;
+  appearance: none;
+  cursor: pointer;
+}
+
+.modal__checkbox:checked::after {
+  content: '';
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: var(--web-studio-white);
+  border-radius: 2px;
+  outline: 3px solid var(--web-studio-blue);
+  background-color: var(--web-studio-blue);
+  background-image: url(../images/modal/check.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.modal__link {
+  text-decoration: underline;
+  color: var(--web-studio-blue);
+}
+
+.modal-btn__close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 8px 11px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 100%;
+  background-color: var(--web-studio-white);
+}
+
+.modal-icon__close {
+  width: 11px;
+  height: 11px;
+}
+
+.modal-icon__close:hover {
+  fill: var(--web-studio-blue);
+}
+
 .features {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -330,6 +498,7 @@ ol {
 .footer-pages__left {
   display: flex;
   flex-direction: column;
+  padding-top: 16px;
 }
 
 .footer-logo {
