--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,7 @@ ol {
 
 .hero-btn__submit {
   width: 200px;
+  margin-top: 30px;
 }
 
 .backdrop {
@@ -181,6 +182,7 @@ ol {
   color: #212121;
   font-size: 20px;
   text-align: center;
+  margin-bottom: 16px;
 }
 
 .modal__label {
@@ -256,7 +258,7 @@ ol {
 }
 
 .modal__checkbox:checked::after {
-  content: '';
+  content: "";
   display: flex;
   justify-content: center;
   align-items: center;
@@ -558,4 +560,46 @@ ol {
   fill: #fff;
   width: 20px;
   height: 20px;
+}
+
+.footer__form {
+  display: flex;
+  gap: 12px;
+}
+
+.footer__input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  width: 358px;
+  height: 50px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: rgba(33, 150, 243, 0);
+  padding: 13px 15px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer__btn {
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: var(--web-studio-blue);
+  width: 200px;
+  height: 50px;
+  border: none;
+
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  color: var(--web-studio-white);
+}
+
+.footer-form__icon {
+  position: relative;
+  left: 6px;
+  top: 3px;
+  width: 24px;
+  height: 24px;
 }
