--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -61,15 +61,33 @@ ol {
   font-size: 26px;
   font-weight: 700;
 }
+.nav-list-item {
+  position: relative;
+}
 .nav-list {
   display: flex;
   align-items: center;
   gap: 50px;
 }
+.nav-list-link::after {
+  content: "";
+  background-color: var(--web-studio-blue);
+  border-radius: 2px;
+  width: 0;
+  height: 4px;
+  position: absolute;
+  top: 45px;
+  left: 0;
+  transition: width 220ms cubic-bezier(0.6, 0, 0.4, 1);
+}
+.nav-list-link:hover::after {
+  width: 100%;
+}
 .nav-list-link {
   color: var(--web-studio-black);
   font-size: 14px;
   letter-spacing: 0.28px;
+  transition: 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
 .nav-list-link:hover {
   color: var(--web-studio-blue);
@@ -129,20 +147,24 @@ ol {
   flex-wrap: wrap;
 }
 .main-list-item {
-  flex-basis: calc((100% - 60px) / 3);
-}
-.info {
-  width: 370px;
   border: 1px solid #eee;
-  background-color: var(--web-studio-white);
+  flex-basis: calc((100% - 60px) / 3);
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.main-list-item:hover {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
-.info-img {
-  width: 370px;
-  height: 294px;
+.list-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
-.info-title {
+.list-title {
   color: var(--web-studio-black);
   font-size: 18px;
   font-weight: 700;
@@ -151,13 +173,41 @@ ol {
   margin: 20px 0 4px;
   padding: 0 24px;
 }
-.info-text {
+.list-text {
   color: var(--web-studio-gray);
   font-weight: 400;
   line-height: 1.9;
   padding: 0 24px 20px;
 }
+.thumb {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  overflow: hidden;
+}
+.overlay-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
+  transform: translatey(100%);
+  transition: transform 0.5s ease;
+}
+.overlay-box__text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 156%;
+  color: #fff;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 62px 23px;
+  width: 100%;
+  height: 294px;
+}
+.main-list-item:hover .overlay-box {
+  transform: translatey(0);
+}
 .footer {
   background-color: #2f303a;
   padding: 60px 0;
@@ -231,4 +281,47 @@ ol {
   fill: #fff;
   width: 20px;
   height: 20px;
+}
+
+.footer__form {
+  display: flex;
+  gap: 12px;
+}
+
+.footer__input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  width: 358px;
+  height: 50px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: rgba(33, 150, 243, 0);
+  padding: 13px 15px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer__btn {
+  border-radius: 4px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: var(--web-studio-blue);
+  width: 200px;
+  height: 50px;
+  border: none;
+
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  color: var(--web-studio-white);
+}
+
+.footer-form__icon {
+  position: relative;
+  fill: var(--web-studio-white);
+  left: 6px;
+  top: 3px;
+  width: 24px;
+  height: 24px;
 }
