--- a/css/styles.css
+++ b/css/styles.css
@@ -62,10 +62,32 @@ ol {
   align-items: center;
   gap: 50px;
 }
+
+.nav-list-item {
+  position: relative;
+}
+
 .nav-list-link {
   color: var(--web-studio-black);
   font-weight: 500;
+  transition:  220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
+
+.nav-list-link::after{
+  content: '';
+  background-color: var(--web-studio-blue);
+  border-radius: 2px;
+  width: 0;
+  height: 4px;
+  position: absolute;
+  top: 45px;
+  left: 0;
+  transition:  width 220ms cubic-bezier(0.6, 0, 0.4, 1);
+}
+.nav-list-link:hover::after{
+  width: 100%;
+}
+
 .nav-list-link:hover {
   color: var(--web-studio-blue);
 }
@@ -471,6 +493,8 @@ ol {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   padding: 17px 30px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .brands-list__item:hover {
   border-color: #2196f3;
