--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -91,6 +91,7 @@ ol {
 }
 .nav-list-link:hover {
   color: var(--web-studio-blue);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .contact-list {
   display: flex;
@@ -103,6 +104,7 @@ ol {
 }
 .contact-list-link:hover {
   color: var(--web-studio-blue);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .contacts-email__icon,
@@ -113,6 +115,7 @@ ol {
 .contact-email:hover svg,
 .contact-tel:hover svg {
   fill: #2196f3;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .main {
@@ -138,6 +141,9 @@ ol {
   background-color: var(--web-studio-blue);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-list {
   margin: 50px 0 0;
@@ -157,6 +163,7 @@ ol {
 .main-list-item:hover {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-img {
   width: 100%;
@@ -192,7 +199,7 @@ ol {
   width: 100%;
   height: 100%;
 
-  transform: translatey(100%);
+  transform: translateY(100%);
   transition: transform 0.5s ease;
 }
 .overlay-box__text {
@@ -206,7 +213,8 @@ ol {
   height: 294px;
 }
 .main-list-item:hover .overlay-box {
-  transform: translatey(0);
+  transform: translateY(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer {
   background-color: #2f303a;
@@ -276,6 +284,7 @@ ol {
 .footer-social__item:hover {
   background-color: #2196f3;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer__icon {
   fill: #fff;
