--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,7 @@ ol {
 }
 .contact-list-link:hover {
   color: var(--web-studio-blue);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-email__icon,
@@ -150,6 +151,20 @@ ol {
   margin: 0 auto;
   display: block;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.button:hover {
+  animation: scale 1s ease infinite alternate;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
+  }
 }
 
 .hero-btn__submit {
@@ -243,6 +258,8 @@ ol {
 .modal__input:hover + .modal__icon {
   border-color: var(--web-studio-blue);
   fill: var(--web-studio-blue);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__com {
@@ -254,13 +271,14 @@ ol {
   border: 1px solid rgba(33, 33, 33, 0.2);
   resize: none;
   cursor: text;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__com:hover,
 .modal__com:focus {
   border-color: var(--web-studio-blue);
   outline-color: var(--web-studio-blue);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form__box {
@@ -324,6 +342,7 @@ ol {
 
 .modal-icon__close:hover {
   fill: var(--web-studio-blue);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .features {
@@ -464,9 +483,11 @@ ol {
 }
 .team-social__item:hover {
   background-color: #2196f3;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social__item:hover svg {
   fill: #fff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social__icon {
   fill: #afb1b8;
@@ -475,8 +496,7 @@ ol {
 }
 .team-social__icon:hover {
   fill: #fff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .brands {
@@ -501,17 +521,15 @@ ol {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   padding: 17px 30px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .brands-list__item:hover {
   border-color: #2196f3;
   cursor: pointer;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .brands-list__item:hover svg {
   fill: #2196f3;
   cursor: pointer;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .brands__icon {
@@ -589,6 +607,7 @@ ol {
 .footer-social__item:hover {
   background-color: #2196f3;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .footer__icon {
   fill: #fff;
